# my_ai_browser

./: README.md  index.html  package-lock.json  package.json
.monkeycode/specs/voa-core/: requirements.md
src/: browser.html  main.ts  overlay.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/ai/: index.ts
src/calibration/: index.ts
src/ocr/: index.ts
src/vision/: index.ts
