[package]
name = "voa"
version = "0.1.0"
description = "Visual Operation Assistant - AI-powered screen guidance"
authors = ["you"]
edition = "2021"

[lib]
name = "voa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
screenshots = "0.8"
uuid = { version = "1", features = ["v4"] }
url = "2"
